tests/golden/type_errors/array_find_callback_return.err
Type error at 1:32: function `<lambda>` expects return bool, got number
  find([1], fun (value: number): number { return 1; });
                                 ^
